--- a/app/styles/layouts/tags.css
+++ b/app/styles/layouts/tags.css
@@ -21,7 +21,6 @@
 
 .settings-tag .tag-edit-button.active {
     border-left: 4px solid;
-    background: color-mod(var(--lightgrey) l(+4%) s(-12%));
     padding-left: 16px;
 }
 
